--- a/front/public/index.html
+++ b/front/public/index.html
@@ -38,7 +38,7 @@
 
     <script type='text/javascript' src='%PUBLIC_URL%/assets/js/jquery.twbsPagination.min.js'></script>
 
-    <title>React .Net E-Commerce</title>
+    <title>Sports-Origin</title>
   </head>
 
   <body>
